--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,12 @@ pandas==0.25.0
 requests==2.22.0
 scikit-learn==0.21.2
 scipy==1.3.1
+itsdangerous==1.1.0
+Jinja2==2.10.1
+MarkupSafe==1.1.1
+Werkzeug==0.15.5
+numpy>=1.9.2
+scipy>=0.15.1
+scikit-learn>=0.18
+matplotlib>=1.4.3
+pandas>=0.19
